@@ -1,5 +1,7 @@
 Date	Added
 
+2008/04/18
+	* Implemented config setting 'vending_over_max' [ultramage]
 2008/04/02
 	* Rev. 12462 Uncommented restricted map entryies for WoESE maps. [L0ne_W0lf]
 2008/03/07
